--- a/Report/01-intro.tex
+++ b/Report/01-intro.tex
@@ -60,9 +60,9 @@ These GDL game descriptions form the basis for the Inductive General Game Playin
 
 An effective way of solving the IGGP problem is a form of machine learning: Inductive Logic Programming (ILP)  \cite{Cropper/IGGP,Muggleton/ILP}. In ILP, the learner is tasked with learning logic programs given some background knowledge and a set of values for which the programs are true or false (also expressed in a logical programming language). In the IGGP paper, the authors showed through empirical evaluations that ILP systems achieve the best score in this task compared to other machine learning techniques \cite{Cropper/IGGP}. The ILP system derives a hypothesis, a logic program that when combined with the background knowledge entails all of the positive and none of the negative examples \cite{Muggleton/ILP}. In the IGGP paper it is also shown that the problem is hard for current ILP systems, with on average only 40\% of the rules being learned by the best performing systems \cite{Cropper/IGGP}.
 
-However, the existing work has limitations. All work so far has assumed that the gameplay being observed is randomly generated \cite{Cropper/IGGP}. Rather than agents playing to win they simply make moves at random. Often this has the result of the game terminating before it reaches a goal state due to a cap on trace length or sections of the rule set remaining completely unused. There has also not been any research done to ascertain the effects that increasing the number of game observation has on the quality of the induced rules. It is unknown whether there is a threshold at which the adding new game traces does not further increase the accuracy. In this paper we use the IGGP framework to evaluate the ability of ILP agents to correctly induce the rules of a game given different sets of gameplay observations - intelligent gameplay versus random gameplay as well as combinations of the two. To generate the intelligent gameplay we use the system Sancho, winner of the 2014 GGP competition\footnote{http://ggp.stanford.edu/iggpc/winners.php accessed 28/04/2020} \cite{Sancho/Github}. 
+However, the existing work has limitations. All work so far has assumed that the gameplay being observed is randomly generated \cite{Cropper/IGGP}. Rather than agents playing to win they simply make moves at random. Often this has the result of the game terminating before it reaches a goal state due to a cap on trace length or sections of the rule set remaining completely unused. There has also not been any research done to ascertain the effects that increasing the number of game observations has on the quality of the induced rules. It is unknown whether there is a threshold at which the adding new game traces does not further increase the accuracy. In this paper we use the IGGP framework to evaluate the ability of ILP agents to correctly induce the rules of a game given different sets of gameplay observations - intelligent gameplay versus random gameplay as well as combinations of the two. To generate the intelligent gameplay we use the system Sancho, winner of the 2014 GGP competition\footnote{http://ggp.stanford.edu/iggpc/winners.php accessed 28/04/2020} \cite{Sancho/Github}. 
 
-Ideally in this paper we would have compared optimal play versus random play or possibly human play against random play. It was clear gathering the data a consistent level human play across a large set of game was not feasible. All the games used in this paper are finite, discrete, deterministic games of complete information, games to which the minimax procedure can be applied. For this set of games using the minimax procedure to generate game traces would guarantee a form of optimality \cite{IntroToAlgorithms}. Namely each play would maximize their minimum gain. Despite this being an attractive prospect it is computationally infeasible to run this for the majority of games in the dataset. Checkers for example has a game tree far too large to reasonably compute \cite{Schaeffer/Checkers}. Another approach considered was using an algorithm such as A* games where it could be applied. For these games an admissible heuristic could to be found so the A* search could utilize it to find an optimal solution \cite{IntroToAlgorithms}. In the end Sancho was decided on since in the cases where the minimax procedure was easily solvable or known admissible heuristic were available for a game Sancho was able to provide optimal or near optimal play. It also brought the advantage of being able to play all the games indiscriminately.
+Ideally in this paper we would have compared optimal play versus random play or possibly human play against random play. It was clear gathering the data a consistent level human play across a large set of game was not feasible. All the games used in this paper are finite, discrete, deterministic games of complete information, games to which the minimax procedure can be applied. For this set of games using the minimax procedure to generate game traces would guarantee a form of optimality \cite{IntroToAlgorithms}. Namely each play would maximize their minimum gain. Despite this being an attractive prospect it is computationally infeasible to run this for the majority of games in the dataset. Checkers for example has a game tree far too large to reasonably compute \cite{Schaeffer/Checkers}. Another approach considered was using an algorithm such as A* on the games where it could be applied. For these games an admissible heuristic could be found so the A* search could utilize it to find an optimal solution \cite{IntroToAlgorithms}. In the end Sancho was decided on since in the cases where the minimax procedure was easily solvable or known admissible heuristic were available for a game Sancho was able to provide optimal or near optimal play. It also brought the advantage of being able to play all the games indiscriminately.
 
 Every year the GGP competition includes a ``Carbon versus Silicone'' event where humans pit themselves against the winner of the main competition. The machines almost always win \cite{Genesereth/GGPOverview} so we can assume Sancho has above amateur human level play hence we use the word intelligent to describe its level of play. We also vary the number of gameplay traces from which the ILP systems learn to determine the optimal number of traces.
 
