captilisation of name

--- a/Report/01-intro.tex
+++ b/Report/01-intro.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}\label{ch:intro}
 General Game Playing (GGP) is a framework in which artificial intelligence programs are required to play a large number of games successfully \cite{Genesereth/GGPOverview}.
-Traditionally game playing AI have focused on a single game \cite{AlphaGo,DeepBlue,Schaeffer/Checkers,Tesauro/Backgammon}. Famous AI include programs such as IBMs deep blue which is able to beat grand masters at chess but is completely unable to play checkers \cite{DeepBlue}. These traditional AI also only do part of the work. A lot of the analysis of the game is often done outside of the system \cite{Schaeffer/Checkers}. A more interesting challenge is building AI that can play games without any prior knowledge. In GGP the AI are given the description of the rules of a game at runtime. Games in the framework range greatly in both number of players and complexity; from the single player Eight Puzzle to the six player Chinese Checkers, and from the relatively simple Rock Paper Scissors to Chess  \cite{GGP-Website}. The progress in the field is consolidated annually at the GGP competition where participants compete to find the best GGP AI \cite{Genesereth/GGPOverview}.
+Traditionally game playing AI have focused on a single game \cite{AlphaGo,DeepBlue,Schaeffer/Checkers,Tesauro/Backgammon}. Famous AI include programs such as IBMs Deep Blue which is able to beat grand masters at chess but is completely unable to play checkers \cite{DeepBlue}. These traditional AI also only do part of the work. A lot of the analysis of the game is often done outside of the system \cite{Schaeffer/Checkers}. A more interesting challenge is building AI that can play games without any prior knowledge. In GGP the AI are given the description of the rules of a game at runtime. Games in the framework range greatly in both number of players and complexity; from the single player Eight Puzzle to the six player Chinese Checkers, and from the relatively simple Rock Paper Scissors to Chess  \cite{GGP-Website}. The progress in the field is consolidated annually at the GGP competition where participants compete to find the best GGP AI \cite{Genesereth/GGPOverview}.
 
 The GGP framework includes a large database of games. In a GGP match games from these databases are selected at random and sent to the competitors \cite{Genesereth/GGPOverview}. The games are specified in the Game Description Language (GDL), a logic programming language built for describing games as state machines \cite{GDL_Spec}. An example of GDL rules is given in listing \ref{lst:GDL}.
 
